@@ -1,3 +1,11 @@
+2007-04-21  Vitaly Alexeev <tishka92@yahoo.com>
+
+	* gameswf/gameswf_action.cpp: fixed action_buffer::execute(), 
+	Flash keeps local variables after executing of frame actions therefore we should not delete them
+	* gameswf/gameswf_sprite.*,
+	* gameswf/gameswf_dlist.*,
+	* gameswf/gameswf_as_sprite.*: added getNextHighestDepth() sprite method
+
 2007-04-19  Vitaly Alexeev <tishka92@yahoo.com>
 
 	* gameswf/gameswf_button.cpp: button on_event() must protect parent
